--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -1,6 +1,17 @@
+<!-- Base.html -->
 {% extends 'base.html' %}
+<!-- Block -->
 {% block content %}
-<h1 class='raleway'>
-  clientes
-</h1>
+<!-- macro.html -> function render_flied -->
+{% from '_macro.html' import render_field %}
+<form class='raleway'>
+  <!-- Input necessary for CSRFProtect -->
+  <input name='csrf_token' type='Hidden' value=' {{ csrf_token() }} '>
+  <!-- Rende Inputs in a loop -->
+  {% for input in client_form %}
+  {{ render_field( input, class="", id="", pattern="{ 4, 25 }", required="True" ) }}
+  {{ render_field( input.label, class="" )}}
+  {% endfor %}
+  <input type='submit' value='AGREGAR'>
+</form>
 {% endblock %}
