--- a/templates/base.haml
+++ b/templates/base.haml
@@ -26,3 +26,5 @@
         .raleway.blanco.relative#titulo
           QRTracker
       .div_fondo_inf.relative.width100.height70
+    %script{type:"text/javascript", src:"{{ url_for('static', filename = 'js/jquery-3.2.1.min.js') }}"}
+    %script{type:"text/javascript", src:"{{ url_for('static', filename = 'js/main.js') }}"}
