--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -1,4 +1,4 @@
-<!-- Base.html -->
+<!-- dBase.html -->
 {% extends 'base.html' %}
 <!-- Block -->
 {% block content %}
@@ -9,9 +9,9 @@
   <input name='csrf_token' type='Hidden' value=' {{ csrf_token() }} '>
   <!-- Rende Inputs in a loop -->
   {% for input in client_form %}
-  {{ render_field( input, class="", id="", pattern="{ 4, 25 }", required="True" ) }}
   {{ render_field( input.label, class="" )}}
+  {{ render_field( input, class="", id="", required="True" ) }}
   {% endfor %}
-  <input type='submit' value='AGREGAR'>
+  <input id='enviar' type='button' value='AGREGAR'>
 </form>
 {% endblock %}
