--- a/templates/base.html
+++ b/templates/base.html
@@ -34,5 +34,7 @@
       </div>
       <div class='div_fondo_inf relative width100 height70'></div>
     </div>
+    <script src="{{ url_for('static', filename = 'js/jquery-3.2.1.min.js') }}" type='text/javascript'></script>
+    <script src="{{ url_for('static', filename = 'js/main.js') }}" type='text/javascript'></script>
   </body>
 </html>
