--- a/templates/funcionarios.html
+++ b/templates/funcionarios.html
@@ -8,9 +8,9 @@
   <input name='csrf_token' type='Hidden' value=' {{ csrf_token() }} '>
   <!-- Rende Inputs in a loop -->
   {% for input in funcionario_form %}
-  {{ render_field( input, class="", id="", pattern="{ 4, 25 }", required="True" ) }}
   {{ render_field( input.label, class="" )}}
+  {{ render_field( input, class="", id="", pattern="{ 4, 25 }", required="True" ) }}
   {% endfor %}
-  <input type='submit' value='AGREGAR'>
+  <input id='enviar' type='submit' value='AGREGAR'>
 </form>
 {% endblock %}
