--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -138,6 +138,13 @@ $verde_oscuro: #37483e;
   font-size: 2vh;
 }
 
+#response_message{
+
+  text-align: center;
+  color: white;
+
+}
+
 input, select{
   position: relative;
   width: 95%;
@@ -191,6 +198,12 @@ input:focus{
 .fondo_blanco{
   background-color: white;
 }
+.fondo_correcto{
+  background-color: #4caf50;
+}
+.fondo_incorrecto{
+  background-color: #f44336;
+}
 
 .blanco{
   color: white;
@@ -230,6 +243,9 @@ input:focus{
 }
 .inline{
   display: inline-block;
+}
+.hidden{
+  display: hidden;
 }
 
 .padding2{
