--- a/templates/paquetes.html
+++ b/templates/paquetes.html
@@ -3,13 +3,13 @@
 <!-- Block -->
 {% block content %}
 {% from '_macro.html' import render_field %}
-<form class='raleway'>
+<form class='raleway submit'>
   <!-- Input necessary for CSRFProtect -->
   <input name='csrf_token' type='Hidden' value=' {{ csrf_token() }} '>
   <!-- Rende Inputs in a loop -->
   {% for input in paquete_form %}
   {{ render_field( input.label, class="" )}}
-  {{ render_field( input, class="", id="", pattern="{ 4, 25 }", required="True" ) }}
+  {{ render_field( input, class="", id="", pattern="{ 4, 25 }", required="True", pattern ="[a-zA-Z0-9 ]{4,25}" ) }}
   {% endfor %}
   <input id='enviar' type='submit' value='AGREGAR'>
 </form>
