--- a/templates/clientes.haml
+++ b/templates/clientes.haml
@@ -7,20 +7,21 @@
 / macro.html -> function render_flied
 {% from '_macro.html' import render_field %}
 
-%form.raleway
+.raleway.absolute.width100.hidden#response_message
+%form.raleway.submit
   / Input necessary for CSRFProtect
-  %input{type:'Hidden', name:"csrf_token", value:' {{ csrf_token() }} '}
+  %input{type:"hidden", name:"csrf_token", value:"{{ csrf_token() }}"}
 
   / Rende Inputs in a loop
   {% for input in client_form %}
 
   {{ render_field( input.label, class="" )}}
-  {{ render_field( input, class="", id="", required="True" ) }}
+  {{ render_field( input, class="", id="", required="True", pattern ="[a-zA-Z0-9 ]{4,25}") }}
 
 
   {% endfor %}
 
-  %input#enviar{type:"button", value:"AGREGAR"}
+  %input#enviar{type:"submit", value:"AGREGAR"}
 
 
 {% endblock %}
