--- a/templates/funcionarios.haml
+++ b/templates/funcionarios.haml
@@ -3,17 +3,21 @@
 
 / Block
 {% block content %}
+
+/ macro.html -> function render_flied
 {% from '_macro.html' import render_field %}
 
+.raleway.absolute.width100.hidden#response_message
 %form.raleway.submit
+
   / Input necessary for CSRFProtect
-  %input{type:'Hidden', name:"csrf_token", value:' {{ csrf_token() }} '}
+  %input{type:"hidden", name:"csrf_token", value:"{{csrf_token()}}"}
 
   / Rende Inputs in a loop
   {% for input in funcionario_form %}
 
   {{ render_field( input.label, class="" )}}
-  {{ render_field( input, class="", id="", pattern="{ 4, 25 }", required="True", pattern ="[a-zA-Z0-9 ]{4,25}") }}
+  {{ render_field( input, class="", id="", required="True", pattern ="[a-zA-Z0-9 ]{4,25}") }}
 
   {% endfor %}
 
