--- a/templates/funcionarios.html
+++ b/templates/funcionarios.html
@@ -2,14 +2,16 @@
 {% extends 'base.html' %}
 <!-- Block -->
 {% block content %}
+<!-- macro.html -> function render_flied -->
 {% from '_macro.html' import render_field %}
+<div class='raleway absolute width100 hidden' id='response_message'></div>
 <form class='raleway submit'>
   <!-- Input necessary for CSRFProtect -->
-  <input name='csrf_token' type='Hidden' value=' {{ csrf_token() }} '>
+  <input name='csrf_token' type='hidden' value='{{csrf_token()}}'>
   <!-- Rende Inputs in a loop -->
   {% for input in funcionario_form %}
   {{ render_field( input.label, class="" )}}
-  {{ render_field( input, class="", id="", pattern="{ 4, 25 }", required="True", pattern ="[a-zA-Z0-9 ]{4,25}") }}
+  {{ render_field( input, class="", id="", required="True", pattern ="[a-zA-Z0-9 ]{4,25}") }}
   {% endfor %}
   <input id='enviar' type='submit' value='AGREGAR'>
 </form>
