--- a/static/css/main.css
+++ b/static/css/main.css
@@ -216,6 +216,10 @@ input:focus {
   width: 100%;
 }
 
+.width24 {
+  width: 24.76%;
+}
+
 .width33 {
   width: 33%;
 }
@@ -246,6 +250,10 @@ input:focus {
 
 .center {
   margin: 0 auto;
+}
+
+.algincenter {
+  text-align: center;
 }
 
 .raleway {
