--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -226,7 +226,9 @@ input:focus{
 .width100{
   width: 100%;
 }
-
+.width24{
+  width: 24.76%;
+}
 .width33{
   width: 33%;
 }
@@ -254,6 +256,9 @@ input:focus{
 
 .center{
   margin: 0 auto;
+}
+.algincenter{
+  text-align: center;
 }
 
 .raleway{
