--- a/templates/base.haml
+++ b/templates/base.haml
@@ -11,7 +11,7 @@
     .width100.alto
       .div_super.absolute.width60.fondo_blanco.top20#card
         {% for pestana in tables %}
-        %a.width33.relative.inline.raleway#pestana{href:"/{{ pestana }}"}
+        %a.width24.relative.inline.raleway#pestana{href:"/{{ pestana }}"}
           {% if pestana == title %}
           .fondo_verde_oscuro.width100.relative.height70.padding2
             {{ pestana }}
@@ -23,7 +23,7 @@
         {% endfor %}
         {% block content %} {% endblock %}
       .div_fondo_super.relative.fondo_gris.width100.height30
-        .raleway.blanco.relative#titulo
+        .raleway.blanco.absolute#titulo
           QRTracker
       .div_fondo_inf.relative.width100.height70
     %script{type:"text/javascript", src:"{{ url_for('static', filename = 'js/jquery-3.2.1.min.js') }}"}
