--- a/templates/paquetes.html
+++ b/templates/paquetes.html
@@ -14,5 +14,6 @@
   {{ render_field( input, class="", id="", required="True", pattern ="[a-zA-Z0-9 ]{4,25}" ) }}
   {% endfor %}
   <input id='enviar' type='submit' value='AGREGAR'>
+  <div class='resultado'></div>
 </form>
 {% endblock %}
