--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -1,4 +1,4 @@
-<!-- dBase.html -->
+<!-- Extends base -->
 {% extends 'base.html' %}
 <!-- Block -->
 {% block content %}
@@ -7,7 +7,6 @@
 <div class='raleway absolute width100 hidden' id='response_message'></div>
 <form class='raleway submit'>
   <!-- Input necessary for CSRFProtect -->
-  <input name='csrf_token' type='hidden' value='{{ csrf_token() }}'>
   <!-- Rende Inputs in a loop -->
   {% for input in client_form %}
   {{ render_field( input.label, class="" )}}
